@@ -61,6 +61,7 @@ extern bool set_readone;
 extern bool set_reverse;
 extern bool set_reverse_folders;
 extern bool set_showprogress;
+extern bool set_show_deprecated_warnings;
 extern bool set_showheaders;
 extern bool set_showbr;
 extern bool set_showhr;
